CMake: update to use MCAS_HOME env variable to allow external compilation
This will allow us to compile mcas as an external directory for outside personalities

Signed-off-by: Omri Arad <omriarad3@gmail.com>

--- a/examples/cpp_basic/CMakeLists.txt
+++ b/examples/cpp_basic/CMakeLists.txt
@@ -4,9 +4,9 @@ project(example-cpp-basic CXX)
 
 add_definitions(${GCC_COVERAGE_COMPILE_FLAGS} -DCONFIG_DEBUG)
 
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/GSL/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/lib/GSL/include)
+include_directories($ENV{MCAS_HOME}/src/components)
 
 add_executable(example-cpp-basic cpp_basic.cpp)
 target_link_libraries(example-cpp-basic common numa pthread boost_program_options dl)
