--- a/src/ado/rust-wrapper/CMakeLists.txt
+++ b/src/ado/rust-wrapper/CMakeLists.txt
@@ -20,12 +20,12 @@ add_compile_options(-g -Wall -Wextra -Wcast-align -Wcast-qual -Wconversion -Wred
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/debug/libexample_rust_ado.a)
 
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libpmem/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libadoproto/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include/)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/GSL/include/)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libnupm/src)
+include_directories($ENV{MCAS_HOME}/src/lib/libpmem/include)
+include_directories($ENV{MCAS_HOME}/src/lib/libadoproto/include)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include/)
+include_directories($ENV{MCAS_HOME}/src/lib/GSL/include/)
+include_directories($ENV{MCAS_HOME}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/libnupm/src)
 
 target_link_libraries(${PROJECT_NAME} common pthread numa dl rt ${CMAKE_CURRENT_BINARY_DIR}/debug/libexample_rust_ado.a)
 
