--- a/src/apps/ado-perf/CMakeLists.txt
+++ b/src/apps/ado-perf/CMakeLists.txt
@@ -5,11 +5,11 @@ execute_process( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTUR
 project (ado-perf)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/GSL/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/lib/GSL/include)
+include_directories($ENV{MCAS_HOME}/src/components)
 
-link_directories(${CMAKE_BINARY_DIR}/src/lib/common)
+link_directories($ENV{MCAS_BINARY_DIR}/src/lib/common)
 link_directories(${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}) # tbb
 link_directories(${CMAKE_INSTALL_PREFIX}/lib) # tbb
 
