--- a/src/apps/kvstore-perf/CMakeLists.txt
+++ b/src/apps/kvstore-perf/CMakeLists.txt
@@ -12,8 +12,8 @@ else()
   set(GTEST_LIB gtestd)
 endif()
 
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/components)
 include_directories(${CMAKE_INSTALL_PREFIX}/include) # rapidjson
 
 link_directories(${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}) # tbbmalloc
