--- a/src/apps/mcas-mpi-bench/CMakeLists.txt
+++ b/src/apps/mcas-mpi-bench/CMakeLists.txt
@@ -27,12 +27,12 @@ message("-- Found MPI compiler: ${MPI_C_COMPILER}")
 message("-- Found MPI include path: ${MPI_C_INCLUDE_PATH}")
 message("-- Found MPI libraries: ${MPI_C_LIBRARIES}")
 
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/components)
 include_directories(${CMAKE_INSTALL_PREFIX}/include)
 include_directories(${MPI_C_INCLUDE_PATH})
 
-link_directories(${CMAKE_BINARY_DIR}/src/lib/common)
+link_directories($ENV{MCAS_BINARY_DIR}/src/lib/common)
 link_directories(${CMAKE_INSTALL_PREFIX}/lib)
 link_directories(${CMAKE_INSTALL_PREFIX}/lib64)
 link_directories(${MPI_C_LIBRARIES})
