--- a/src/components/ado/mgr_proxy/CMakeLists.txt
+++ b/src/components/ado/mgr_proxy/CMakeLists.txt
@@ -6,10 +6,10 @@ add_subdirectory(unit_test)
 
 add_definitions(-DCONFIG_DEBUG)
 
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/GSL/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libthreadipc/include)
+include_directories($ENV{MCAS_HOME}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/lib/GSL/include)
+include_directories($ENV{MCAS_HOME}/src/lib/libthreadipc/include)
 include_directories(${CMAKE_INSTALL_PREFIX}/include) # TBB
 
 file(GLOB SOURCES src/*.c*)
