--- a/src/components/ado/mgr_proxy/unit_test/CMakeLists.txt
+++ b/src/components/ado/mgr_proxy/unit_test/CMakeLists.txt
@@ -4,7 +4,7 @@ project (ado-prox-test CXX)
 
 add_definitions(-DCONFIG_DEBUG)
 
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
+include_directories($ENV{MCAS_HOME}/src/components)
 
 include_directories(${CMAKE_INSTALL_PREFIX}/include)
 link_directories(${CMAKE_INSTALL_PREFIX}/lib)
