--- a/src/components/client/mcas-client/CMakeLists.txt
+++ b/src/components/client/mcas-client/CMakeLists.txt
@@ -18,10 +18,10 @@ file(GLOB SOURCES src/*.cpp)
 add_definitions(-DCONFIG_DEBUG)
 add_compile_options(${FLAG_DUMP_CLASS})
 
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libpmem/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/cityhash/cityhash/src)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/libpmem/include)
+include_directories($ENV{MCAS_HOME}/src/lib/cityhash/cityhash/src)
 include_directories(../)
 include_directories(../../)
 include_directories(${CMAKE_INSTALL_PREFIX}/include) # city.h
