--- a/src/mm/ccpm/CMakeLists.txt
+++ b/src/mm/ccpm/CMakeLists.txt
@@ -6,12 +6,12 @@ project(mm-plugin-ccpm C CXX)
 
 add_compile_options("-fvisibility=hidden")
 
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libpmem/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libccpm/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libmm/src)
-#include_directories(${CMAKE_SOURCE_DIR}/src/mm/ccpm/include)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/lib/libpmem/include)
+include_directories($ENV{MCAS_HOME}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/libccpm/include)
+include_directories($ENV{MCAS_HOME}/src/lib/libmm/src)
+#include_directories($ENV{MCAS_HOME}/src/mm/ccpm/include)
 include_directories(${CMAKE_INSTALL_PREFIX}/include)
 
 #link_directories(${CMAKE_CURRENT_BINARY_DIR}/jemalloc-source/build/lib)
@@ -21,13 +21,13 @@ link_directories(${CMAKE_INSTALL_PREFIX}/lib/)
 file(GLOB SOURCES
   # ../src/lib/libccpm/src/area_ctl.cpp
   # ../src/lib/libccpm/src/cca.cpp
-  # ../src/lib/libccpm/src/doubt.cpp 
-  # ../src/lib/libccpm/src/tracker_log.cpp 
-  # ../src/lib/libccpm/src/area_top.cpp 
-  # ../src/lib/libccpm/src/ccpm.cpp 
-  # ../src/lib/libccpm/src/log.cpp 
-  # ../src/lib/libccpm/src/value_tracked.cpp 
-  # ../src/lib/libccpm/src/atomic_word.cpp 
+  # ../src/lib/libccpm/src/doubt.cpp
+  # ../src/lib/libccpm/src/tracker_log.cpp
+  # ../src/lib/libccpm/src/area_top.cpp
+  # ../src/lib/libccpm/src/ccpm.cpp
+  # ../src/lib/libccpm/src/log.cpp
+  # ../src/lib/libccpm/src/value_tracked.cpp
+  # ../src/lib/libccpm/src/atomic_word.cpp
   # ../src/lib/libccpm/src/container_cc.cpp
   src/mm_plugin.cpp)
 
