--- a/src/python/mcas-python-api/setup.py.in
+++ b/src/python/mcas-python-api/setup.py.in
@@ -21,16 +21,16 @@ module_core = Extension('mcas',
                                          ('CXX',''),
                                          ('MINOR_VERSION', '0')],
                         include_dirs = [include_dir,
-                                        '${CMAKE_SOURCE_DIR}/src/components',
-                                        '${CMAKE_SOURCE_DIR}/src/lib/common/include',
-                                        '${CMAKE_SOURCE_DIR}/src/lib/GSL/include',
-                                        '${CMAKE_SOURCE_DIR}/src/lib64/GSL/include',
+                                        '$ENV{MCAS_HOME}/src/components',
+                                        '$ENV{MCAS_HOME}/src/lib/common/include',
+                                        '$ENV{MCAS_HOME}/src/lib/GSL/include',
+                                        '$ENV{MCAS_HOME}/src/lib64/GSL/include',
                                         '${CMAKE_CURRENT_BINARY_DIR}/src',
                                         '${PYTHON_SITE_NUMPY_INCLUDES}'
                         ],
                         library_dirs = ['/usr/lib/${PYTHON_FILENAME}/',
-                                        '${CMAKE_BINARY_DIR}/lib/common',
-                                        '${CMAKE_BINARY_DIR}/lib64/common',
+                                        '$ENV{MCAS_BINARY_DIR}/lib/common',
+                                        '$ENV{MCAS_BINARY_DIR}/lib64/common',
                                         '${CMAKE_INSTALL_PREFIX}/lib',
                                         '${CMAKE_INSTALL_PREFIX}/lib64',
                                         '/usr/local/lib',
