--- a/src/python/pymm/setup.py.in
+++ b/src/python/pymm/setup.py.in
@@ -34,19 +34,19 @@ pymm_module_core = Extension('pymmcore',
                                          ('MINOR_VERSION', '0')],
                         include_dirs = [include_dir,
                                         '/usr/local/include',
-                                        '${CMAKE_SOURCE_DIR}/src/python/pymm/core',
-                                        '${CMAKE_BINARY_DIR}/src/python/pymm/core',
-                                        '${CMAKE_SOURCE_DIR}/src/components',
-                                        '${CMAKE_SOURCE_DIR}/src/lib/libpmem/include',
-                                        '${CMAKE_SOURCE_DIR}/src/lib/common/include',
-                                        '${CMAKE_SOURCE_DIR}/src/mm',
-                                        '${CMAKE_SOURCE_DIR}/src/lib/libccpm/include',
+                                        '$ENV{MCAS_HOME}/src/python/pymm/core',
+                                        '$ENV{MCAS_BINARY_DIR}/src/python/pymm/core',
+                                        '$ENV{MCAS_HOME}/src/components',
+                                        '$ENV{MCAS_HOME}/src/lib/libpmem/include',
+                                        '$ENV{MCAS_HOME}/src/lib/common/include',
+                                        '$ENV{MCAS_HOME}/src/mm',
+                                        '$ENV{MCAS_HOME}/src/lib/libccpm/include',
                                         '${CMAKE_INSTALL_PREFIX}/include',
                                         '${PYTHON_SITE_NUMPY_INCLUDES}',
                         ],
                         library_dirs = ['/usr/lib/${PYTHON_FILENAME}/',
-                                        '${CMAKE_BINARY_DIR}/src/lib/libpmem',
-                                        '${CMAKE_BINARY_DIR}/src/lib/libccpm',
+                                        '$ENV{MCAS_BINARY_DIR}/src/lib/libpmem',
+                                        '$ENV{MCAS_BINARY_DIR}/src/lib/libccpm',
                                         '${CMAKE_INSTALL_PREFIX}/lib',
                                         '${CMAKE_INSTALL_PREFIX}/lib64',
                                         '/usr/local/lib',
