--- a/src/python/python-personality/pymcas/setup.py.in
+++ b/src/python/python-personality/pymcas/setup.py.in
@@ -25,7 +25,7 @@ pymcas_module_core = Extension('pymcascore',
                                          ('CXX',''),
                                          ('MINOR_VERSION', '0')],
                         include_dirs = [include_dir,
-                                        '${CMAKE_SOURCE_DIR}/src/python/mcas-python-api/src',
+                                        '$ENV{MCAS_HOME}/src/python/mcas-python-api/src',
                                         '${CMAKE_INSTALL_PREFIX}/include',
                                         '${PYTHON_SITE_NUMPY_INCLUDES}',
                         ],
