--- a/src/server/ado/CMakeLists.txt
+++ b/src/server/ado/CMakeLists.txt
@@ -11,14 +11,14 @@ add_definitions(-DCONFIG_DEBUG)
 add_definitions(-DCONFIG_DEBUG)
 add_compile_options("$<$<CONFIG:Release>:-DNDEBUG>")
 
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libnupm/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libadoproto/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
-include_directories(${CMAKE_SOURCE_DIR}/src/components/ado/ado_proxy/src)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/libadoproto/generated)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/lib/libnupm/include)
+include_directories($ENV{MCAS_HOME}/src/lib/libadoproto/include)
+include_directories($ENV{MCAS_HOME}/src/components)
+include_directories($ENV{MCAS_HOME}/src/components/ado/ado_proxy/src)
+include_directories($ENV{MCAS_HOME}/src/lib/libadoproto/generated)
 include_directories(${CMAKE_INSTALL_PREFIX}/include) # docker.h
-include_directories(${CMAKE_SOURCE_DIR}/src/kernel/modules/xpmem/include)
+include_directories($ENV{MCAS_HOME}/src/kernel/modules/xpmem/include)
 
 link_directories(${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
 link_directories(${CMAKE_INSTALL_PREFIX}/lib) 
