--- a/examples/cpp_bench/CMakeLists.txt
+++ b/examples/cpp_bench/CMakeLists.txt
@@ -6,9 +6,9 @@ project(example-cpp-bench CXX)
 add_definitions(${GCC_COVERAGE_COMPILE_FLAGS} -DCONFIG_DEBUG)
 add_compile_options(-DNDEBUG)
 
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/GSL/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/lib/GSL/include)
+include_directories($ENV{MCAS_HOME}/src/components)
 
 add_executable(example-cpp-bench cpp_bench.cpp)
 target_link_libraries(example-cpp-bench common numa pthread boost_program_options dl)
