--- a/src/components/cluster/zyre/unit_test/CMakeLists.txt
+++ b/src/components/cluster/zyre/unit_test/CMakeLists.txt
@@ -14,8 +14,8 @@ else()
 endif()
 
 include_directories(${CMAKE_INSTALL_PREFIX}/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/components)
 
 link_directories(${CMAKE_INSTALL_PREFIX}/lib)
 link_directories(${CMAKE_INSTALL_PREFIX}/lib64)
