--- a/src/components/crypto/tls/unit_test/CMakeLists.txt
+++ b/src/components/crypto/tls/unit_test/CMakeLists.txt
@@ -7,9 +7,9 @@ enable_language(CXX C ASM)
 
 add_definitions(-DCONFIG_DEBUG)
 
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include/)
-include_directories(${CMAKE_SOURCE_DIR}/src/components)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib/common/include)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include/)
+include_directories($ENV{MCAS_HOME}/src/components)
+include_directories($ENV{MCAS_HOME}/src/lib/common/include)
 include_directories(${CMAKE_INSTALL_PREFIX}/include)
 
 link_directories(${CMAKE_INSTALL_PREFIX}/lib)
