--- a/src/kernel/modules/xpmem/CMakeLists.txt
+++ b/src/kernel/modules/xpmem/CMakeLists.txt
@@ -4,7 +4,7 @@ include(${CMAKE_ROOT}/Modules/ExternalProject.cmake)
 
 if(BUILD_KERNEL_SUPPORT)
   ExternalProject_Add(xpmem-kernel-module
-    SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/kernel/modules/xpmem
+    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
     BUILD_IN_SOURCE 1
     CONFIGURE_COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/autogen.sh
     COMMAND ./configure --with-kerneldir=/lib/modules/${CMAKE_HOST_SYSTEM_VERSION}/build --prefix=${CMAKE_INSTALL_PREFIX}
@@ -13,7 +13,7 @@ if(BUILD_KERNEL_SUPPORT)
     )
 else(BUILD_KERNEL_SUPPORT)
     ExternalProject_Add(xpmem-kernel-module
-    SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/kernel/modules/xpmem
+    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
     BUILD_IN_SOURCE 1
     CONFIGURE_COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/autogen.sh
     COMMAND ./configure --disable-kernel-module --prefix=${CMAKE_INSTALL_PREFIX}
