--- a/src/lib/rapidjson/test/perftest/CMakeLists.txt
+++ b/src/lib/rapidjson/test/perftest/CMakeLists.txt
@@ -24,5 +24,5 @@ set_property(DIRECTORY PROPERTY COMPILE_OPTIONS ${EXTRA_CXX_FLAGS})
 IF(NOT (CMAKE_BUILD_TYPE STREQUAL "Debug"))
 add_test(NAME perftest
     COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perftest
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+    WORKING_DIRECTORY $ENV{MCAS_HOME}/bin)
 ENDIF()
