--- a/src/lib/rapidjson/test/unittest/CMakeLists.txt
+++ b/src/lib/rapidjson/test/unittest/CMakeLists.txt
@@ -75,13 +75,13 @@ add_dependencies(tests unittest)
 
 add_test(NAME unittest
     COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unittest
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+    WORKING_DIRECTORY $ENV{MCAS_HOME}/bin)
 
 if(NOT MSVC)
     # Not running SIMD.* unit test cases for Valgrind
     add_test(NAME valgrind_unittest
-        COMMAND valgrind --suppressions=${CMAKE_SOURCE_DIR}/test/valgrind.supp --leak-check=full --error-exitcode=1 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unittest --gtest_filter=-SIMD.*
-        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+        COMMAND valgrind --suppressions=$ENV{MCAS_HOME}/test/valgrind.supp --leak-check=full --error-exitcode=1 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unittest --gtest_filter=-SIMD.*
+        WORKING_DIRECTORY $ENV{MCAS_HOME}/bin)
 
     if(CMAKE_BUILD_TYPE STREQUAL "Debug")
         add_test(NAME symbol_check
