initial support of secondary index

--- a/examples/personalities/cpp_symtab/CMakeLists.txt
+++ b/examples/personalities/cpp_symtab/CMakeLists.txt
@@ -24,6 +24,7 @@ include_directories(${CMAKE_SOURCE_DIR}/src/lib/libccpm/include)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/libpmem/common)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/libnop/include)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/libadoproto/include)
+include_directories(${CMAKE_SOURCE_DIR}/src/lib/stx_btree)
 include_directories(${CMAKE_INSTALL_PREFIX}/include) # EASTL
 
 link_directories(${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}) # flatbuffers
